--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1144,6 +1144,10 @@ section.lazy-placeholder:after {
   color: #16406e;
   font-weight: bold;
 }
+.cid-s0rPblANrn .mbr-section-title,
+.cid-s0rPblANrn .ornament {
+  color: #16406e;
+}
 .cid-s0ssqXTg7G {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -1282,6 +1286,10 @@ section.lazy-placeholder:after {
 .cid-s0sxtmEzjb .group-title {
   color: #16406e;
   font-weight: bold;
+}
+.cid-s0sxtmEzjb .mbr-section-title,
+.cid-s0sxtmEzjb .ornament {
+  color: #16406e;
 }
 .cid-s0t4mxwpEt {
   padding-top: 0px;
@@ -1447,6 +1455,10 @@ section.lazy-placeholder:after {
   padding-bottom: 4px;
   font-size: 14px;
 }
+.cid-s0taK79tIy .mbr-section-title,
+.cid-s0taK79tIy .head-item {
+  color: #16406e;
+}
 .cid-s0t5zfrdVf {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -1580,7 +1592,7 @@ section.lazy-placeholder:after {
 .cid-s0tOC3FRK2 {
   padding-top: 60px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/background64.jpg");
+  background-image: url("../../../assets/images/background65.jpg");
 }
 .cid-s0tOC3FRK2 .container-fluid {
   padding: 0 3rem;
@@ -1664,7 +1676,7 @@ section.lazy-placeholder:after {
 .cid-s0tRIt7WsN {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/background64.jpg");
+  background-image: url("../../../assets/images/background65.jpg");
 }
 .cid-s0tRIt7WsN .container-fluid {
   padding: 0 3rem;
@@ -1748,7 +1760,7 @@ section.lazy-placeholder:after {
 .cid-s0tUZWRW5a {
   padding-top: 60px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/background64.jpg");
+  background-image: url("../../../assets/images/background65.jpg");
 }
 .cid-s0tUZWRW5a .container-fluid {
   padding: 0 3rem;
