--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -619,6 +619,7 @@ section.lazy-placeholder:after {
 }
 .cid-s0u0dPMeK2 .mbr-section-title {
   margin: 0;
+  color: #16406e;
 }
 .cid-s0u0dPMeK2 .mbr-section-subtitle {
   color: #8d97ad;
@@ -1592,7 +1593,7 @@ section.lazy-placeholder:after {
 .cid-s0tOC3FRK2 {
   padding-top: 60px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/background65.jpg");
+  background-image: url("../../../assets/images/background66.jpg");
 }
 .cid-s0tOC3FRK2 .container-fluid {
   padding: 0 3rem;
@@ -1676,7 +1677,7 @@ section.lazy-placeholder:after {
 .cid-s0tRIt7WsN {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/background65.jpg");
+  background-image: url("../../../assets/images/background66.jpg");
 }
 .cid-s0tRIt7WsN .container-fluid {
   padding: 0 3rem;
@@ -1760,7 +1761,7 @@ section.lazy-placeholder:after {
 .cid-s0tUZWRW5a {
   padding-top: 60px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/background65.jpg");
+  background-image: url("../../../assets/images/background66.jpg");
 }
 .cid-s0tUZWRW5a .container-fluid {
   padding: 0 3rem;
